# geo-nyc

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  PART3_MEMBER_C.md  README.md  pyproject.toml  render.yaml
.cursor/rules/: commit-after-work.mdc
api/: __init__.py  main.py  schemas.py
api/routers/: __init__.py  documents.py  dsl.py  health.py  layers.py  optimize.py  runs.py
apps/web/: .env.local.example  README.md  README_frontend.md  next.config.ts  package-lock.json  package.json  upstreamUrl.ts
data/fields/: cost_grid.npz  cost_raster_meta.json  depth.npz  depth_meta.json
data/fixtures/: nyc_geology_glossary.json
genyc_data/layers/: borough_boundaries_water.geojson
genyc_data/source_pdfs/: usgs_bedrock_metadata.xml
geo_nyc/: __init__.py  config.py  exceptions.py  logging.py
geo_nyc/ai/: __init__.py
geo_nyc/documents/: __init__.py  document_service.py  pdf_extractor.py  schemas.py
geo_nyc/domain/: __init__.py  normalization.py
geo_nyc/extraction/: __init__.py  chunker.py  llm_extractor.py  relevance.py  schemas.py  structured.py  validator.py
geo_nyc/modeling/: __init__.py  constraint_builder.py  constraints.py  extent.py  field_builder.py  field_export.py  gempy_runner.py  mesh_export.py  rbf_runner.py  runner.py  synthetic_field.py  synthetic_mesh.py
geo_nyc/parsers/: __init__.py
geo_nyc/prompts/: __init__.py  nyc_geology_extraction.md  repair_extraction.md
geo_nyc/runs/: __init__.py  bootstrap.py  fixtures.py  manifest.py  run_service.py
geonyc-data/: PART3_MEMBER_C.md  README.md  requirements.txt
geonyc-data/api/: __init__.py
geonyc-data/scripts/: build_field.py  (+1 more)
planning/: part-2-design.md  part-2-requirements.md  part-2-tasks.md
scripts/: build_field.py  fetch_open_data.py  generate_gempy_depth.py  smoke_render.py
tests/: _pdf_helpers.py  conftest.py  test_api_documents.py  test_api_health.py  test_api_layers.py  test_api_optimize.py  test_api_runs.py  test_chunker.py  test_config.py  test_constraint_builder.py  test_constraints.py  test_document_service.py  test_dsl_builder.py  test_dsl_parser.py  test_dsl_validator.py  test_extraction_validator.py  test_field_builder.py  test_field_export.py  test_gempy_runner.py  test_llm_extractor.py  test_mesh_export.py  test_normalization.py  test_ollama_provider.py  test_pdf_extractor.py  test_prompts.py  test_rbf_runner.py  test_relevance.py  test_run_field_fallback.py  test_run_mesh_runners.py  test_run_service.py  test_run_with_document.py  test_run_with_llm.py  test_structured_schemas.py  test_synthetic_mesh.py
(+58 files in other folders)
